--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-plugin-sitemap": "^5.7.0",
     "gatsby-plugin-theme-ui": "^0.6.2",
+    "gatsby-remark-copy-linked-files": "^5.8.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
     "gatsby-remark-responsive-iframe": "^5.7.0",
